# flutter_pikafish

./: .restyled.yaml  CHANGELOG.md  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/java/cn/mdevs/cchess/engine/pikafish/: PikafishPlugin.java
assets/pikafish/: android-armv8  linux-avx2  macos-apple-silicon
example/: README.md  pubspec.yaml
example/android/: gradle.properties  local.properties
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/cn/mdevs/cchess/engine/pikafish/example/: MainActivity.kt
example/integration_test/: app_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/src/: output_widget.dart
example/macos/Runner.xcodeproj/: project.pbxproj
ios/: pikafish.podspec
ios/Classes/: PikafishPlugin.h  PikafishPlugin.mm
ios/FlutterPikafish/: ffi.cpp  ffi.h
ios/Pikafish/src/: bitboard.h  types.h
lib/: pikafish.dart
lib/src/: ffi.dart  pikafish.dart  pikafish_state.dart
lib/src/engine/: engine_interface.dart  ffi_engine.dart  process_engine.dart
